# pixel_painter

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  show_pattern.ps1
include/app/: AndroidPattern.hpp  ColorPalette.hpp  PixelGrid.hpp
scripts/: run.ps1
src/: main.cpp
src/app/: AndroidPattern.cpp  ColorPalette.cpp  PixelGrid.cpp
